mule-user-guide/v/3.7/connector-configuration-reference.adoc
= 连接器配置参考
:keywords: anypoint, studio, connectors, transports

Mule有两种基本的连接器结构：

*  <<Operation-Based Connector Configuration,Operation-based connectors>>和
*  <<Endpoint-Based Connector Configuration,Endpoint-based connectors>>。本文档描述了这两种类型所需的一般配置，但不提供特定连接器的说明;要获得连接器的参考材料，请查阅所需的连接器文档。

要快速访问Anypoint Studio捆绑的所有连接器的参考信息，请执行以下操作：

. 转到 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]页面。

. 转到*Accessing Connectors*部分。

. 检查提供的表格中的*Reference*列

[NOTE]
====
*HTTP connector changes in Mule 3.6 and newer*

从Mule 3.6和更新版本开始，基于HTTP和HTTPS端点的连接器和传输已被支持HTTPS的单个基于HTTP操作的连接器所取代。未来版本中将删除旧版基于端点的HTTP连接器。

有关基于HTTP操作的连接器的更多信息，请参阅 link:/mule-user-guide/v/3.7/http-connector[HTTP连接器]。
====

== 先决条件

本文档假定您熟悉Mule和 link:/anypoint-studio/v/5/index[Anypoint Studio界面]。要提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[Anypoint Studio教程]。此外，此示例假定您对 link:/mule-user-guide/v/3.7/mule-concepts[骡流]， link:/mule-user-guide/v/3.7/global-elements[全球元素]和 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]有基本的了解。

== 基于操作的连接器配置

基于操作的连接器变化太大以至于无法实现通用配置指令。但是，至少所有基于操作的连接器都需要在“常规”选项卡上配置以下字段：

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Connector Configuration*  |定义全局连接参数。大多数基于操作的连接器都要求在全局级别配置连接凭证，而不是在指定操作的流程中进行配置。
| *Operation*  |从下拉列表中选择一项操作，以指定连接器应对API或协议执行的功能。
|===

请务必参阅连接器特定的配置说明，以获取有关剩余字段的指导。有关在Anypoint Studio中自动绑定哪些连接器的信息，请参阅 link:https://www.mulesoft.com/exchange[Anypoint Exchange]。

在流程中配置基于操作的连接器：

.  *Configure a global connector configuration.*点击Anypoint Studio画布下方的*Global Element*选项卡以创建新的全局连接器配置，或者在XML编辑器中为您的流添加`<connectorname>:config`。

.  *Configure connector operation in your flow.*将调色板中的连接器拖放到画布上并选择适当的操作，或者在XML编辑器的流程中添加`<connectorname>:<operation>`。

.  *Reference the connector configuration from the connector operation.*单击属性编辑器中的*Connector Configuration*旁边的下拉列表以选择您在步骤1中配置的全局连接器，或者在XML中添加`config-ref`属性编辑器并提供全局连接器配置的名称。

.  *Configure any additional parameters necessary for the operation.*

== 基于端点的连接器配置

终端将消息传入和传出Mule流，通常传递给外部资源，如数据库，Web客户端或电子邮件服务器，但它们也可以与其他Mule流交换消息。

==== 入站端点

驻留在流程开始处并充当*Message Source*的{​​{0}}在每次接收到消息时触发一个新的流程实例。

每个传入消息必须遵循接收端点支持的特定协议。例如，电子邮件可以到达POP3或IMAP入站端点，但文件必须使用FTP，文件或SFTP端点。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:connector_conf_inf_3.png[connector_conf_inf_3]
....
[tab,title="XML Editor"]
....
[source, xml, linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="localhost" port="8083" doc:name="HTTP Request Configuration"/>   
    <flow name="exampleflow2" >
        <pop3:inbound-endpoint host="localhost" user="${prod.user}" responseTimeout="10000" doc:name="POP3"/>
        <set-payload doc:name="Set Payload" value="foo"/>
        <http:request config-ref="HTTP_Request_Configuration" path="/" method="POST" doc:name="HTTP"/>
        <logger level="INFO" doc:name="Logger" message="bar"/>
    </flow>
----
....
------

==== 复合来源

称为*Composite Source Scope*的特殊范围允许您将两个或多个接收相同类型数据的连接器（例如电子邮件，文件，数据库映射或HTML）封装到单个消息处理块中。每个嵌入式连接器在其特定通道上侦听传入消息。无论哪个连接器首先收到一条消息，都会成为流的特定实例的消息源。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:connector_config_ref2.png[connector_config_ref2]

Drag the Composite Source Scope onto the canvas from the palette, then drag the connectors into the Composite Source Scope processing block. The composite source then allows the each embedded connector to act as a temporary, non-exclusive message source when it receives an incoming message.
....
[tab,title="XML Editor"]
....
[source, xml, linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="localhost" port="8083" doc:name="HTTP Request Configuration"/>
    <flow name="exampleflow2" >
        <composite-source doc:name="Composite Source">
            <pop3:inbound-endpoint host="localhost" user="${prod.user}" responseTimeout="10000" doc:name="POP3"/>
            <jetty:inbound-endpoint exchange-pattern="one-way" address="www.example.com" doc:name="Jetty"/>
        </composite-source>
        <set-payload doc:name="Set Payload" value="foo"/>
        <http:request config-ref="HTTP_Request_Configuration" path="/" method="POST" doc:name="HTTP"/>
        <logger level="INFO" doc:name="Logger" message="bar"/>
    </flow>
----

Add a composite-source tag into your flow, then embed multiple connectors inside the scope of the tag. The composite source then allows the each connector to act as a temporary, non-exclusive message source when it receives an incoming message.
....
------

==== 出站端点

如果基于端点的连接器不是流中的第一个构建块（即消息源），则它被指定为*outbound endpoint*，因为它使用它支持的特定传输通道（如SMTP，FTP，或JDBC）将消息分发到流之外的目标，其范围可以从文件系统到电子邮件服务器到Web客户端，也可以包含其他Mule流。

在许多情况下，*outbound endpoint*通过将完全处理的消息分发到其最终的外部目标来完成流程。但是，出站端点并不总是完成流程处理，因为它们也可以存在于流程的中间，将数据分派到外部源，并将该数据（或其他数据）传递给流程中的下一个消息处理器。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:connector_config_ref_4.png[connector_config_ref_4]
....
[tab,title="XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="exampleflow2" >      
   <pop3:inbound-endpoint host="localhost" user="${prod.user}" responseTimeout="10000" doc:name="POP3"/>     
   <set-payload doc:name="Set Payload" value="foo"/>
   <pop3:outbound-endpoint host="localhost" user="${prod.user}" responseTimeout="10000" doc:name="POP3"/>
   <logger level="INFO" doc:name="Logger" message="bar"/>
</flow>
----
....
------

=== 配置参考

虽然各种基于端点的连接器具有独特的属性，但大多数这些构建模块共享公共属性。

*General*标签通常会提供这些字段。

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Display Name*  |默认为连接器名称。更改显示名称必须是字母数字，以反映端点的特定角色，例如`Order Entry Endpoint`
| *Exchange-Pattern*  |定义客户端和服务器之间的交互。可用的模式是*one-way*和*request-response*。单向交换模式假设服务器不需要响应，而请求 - 响应交换模式等待服务器响应，然后才允许消息处理继续。
| *Host*  |默认名称是`localhost`。输入服务器的完全限定域名（FQDN）或IP地址。
| *Port*  |用于连接到服务器的端口号。 （例如80）
| *Path*  |允许指定路径。例如/ enter / the / path
| *Connector Configuration*  |定义全局连接参数。
|===

取决于协议和类型（入站或出站）;这些附加参数可能会出现在常规选项卡上：

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Polling Frequency*  |时间是毫秒（ms）以检查传入消息。默认值是1000毫秒。
| *Output Pattern*  |从下拉列表中选择模式。在将分析的文件名写入磁盘时使用。
| *Query Key*  |输入要使用的查询的关键字。
| *Transaction*  |让您选择要用于交易的元素。点击加*+*按钮添加Mule交易。

| *Cron Information*  |输入cron表达式按日期和时间安排事件。
| *Method*  |对消息数据执行的操作。可用的选项有：*OPTION, GET, HEAD, POST, PUT, TRACE, CONNECT,*和*DELETE*。
|===

*Advanced*标签通常包含这些字段。

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Address*  |输入网址。如果使用此属性，请将其包含为URI的一部分。与主机，端口和路径互斥。
| *Response Timeout*  |端点等待响应的时间（以毫秒为单位）。
| *Encoding*  |选择运输使用的字符集。例如，UTF-8
| *Disable Transport Transformer*  |如果您不想使用端点的默认响应传输，请选中此框。
| *MIME Type*  |从该端点支持的下拉列表中选择一种格式。
| *Connector Endpoint*  |定义连接器配置详细信息的全局版本。
| *Business Events*  |选中该框以启用默认事件跟踪。
|===

*Transformers*标签通常包含这些字段。

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Global Transformers (Request)*  |输入变送器列表以在交付之前应用于消息。变压器按照它们列出的顺序应用。
| *Global Transformers (Response)*  |输入同步变换器的列表，以在从传输返回之前应用到响应。
|===

== 为连接器配置全局元素

当开发人员使用连接器创建Mule应用程序时，他们会管理"global element"内的详细信息和连接策略，以便开发人员关注支持的多个连接。这意味着API /服务实例的连接信息保存在全局元素中，可以通过Studio UI轻松访问，也可以使用每个连接器页面或Exchange上提供的连接器技术参考手动进行手动访问 - 无论您想要拖放还是编码Mule手动应用XML代码，用户指南的目标是简化配置，因为快速而灵活的开发，测试和部署是必不可少的。

基本上，连接器的全局元素通常包含对存储在属性文件中的用户名，密码和安全令牌的引用。这些引用可以安全地存储在全局元素中。引用通常使用Ant语法 -  `${my.ConnectionProperty}`，并且只是连接凭证和URI的占位符。

如果您已经了解如何设置连接属性，那么另一个考虑就是确保您在`.properties`或类似文件中安全地封装连接属性，而不是在全局元素本身内。 `.properties`文件通常位于应用程序中的资源文件夹`.res`内;而不是流中连接器实例的级别。

// todo：维护配置级的状态？
此全局连接器配置维护配置和状态，并且同一类型的许多连接器可以在全局级别引用连接器配置。例如，具有四个不同HTTP连接器的Mule应用程序可能都引用全局配置的HTTP连接器，该连接器定义了诸如安全性，协议和代理设置等细节。因为它们都引用相同的全局连接器配置，所以四个HTTP端点在应用程序内运行*consistently*。

所选全局连接器配置也可以定义为域*Shared Resources*，并由同一域的所有应用程序引用。有关更多信息，请参阅 link:/mule-user-guide/v/3.7/shared-resources[共享资源]。

请注意，您在Anypoint Studio中配置的全局元素称为*Connector Configuration*，并且在连接器级别几乎总是_referenced_。连接器始终利用您仔细准备的连接器配置，前提是您的连接凭据和设置是有效的。如果您选择在全局元素属性窗口中使用用户界面的*Test Connection*按钮或类似按钮，Studio会提醒您设计时出现问题。这是您在Studio中连接器全局元素配置的中心。

选择/单击流程中的连接器后，从底部窗口的下拉菜单中访问该屏幕。注意：确保您配置连接器进行身份验证并连接到允许访问的确切服务实例。在设计应用程序时，请确保最初使用帐户进行集成开发，而不是任何生产帐户。大部分时间，相应的连接器XML标签都遵循标准格式：

用于基于操作的连接器的`<connectorName>:config`，

和基于端点的连接器：`<connectorName>:connector`

在Studio中，如果使用UI，则可以快速简单地设置一个应用程序：

* 使用连接器来挂接API或Web服务，监听由服务器管理的信息，维护持久连接以与数据库交互并导航外部服务体系结构，发送消息，并通过Mule流等将它们传递给其他应用程序。

您可以使用您上面已阅读的基本集成开发实践来完成所有这些工作。了解Mule应用程序开发和连接管理意味着您可以开始在Mule运行时之上开发和磨练集成模式。即使你不明白Mule在内部是如何工作的，你也可以利用其灵活耐用的引擎。通过阅读Mule应用程序代码，按照其他人在Anypoint Exchange中为您设置的开发过程，或通过按照MuleSoft教程一步步操作，尤其是Mule 3.x和Studio 5.x版本及更早版本的教程，您可以了解Mule在Studio中内置的Mule应用程序的传统实现。使用顶部的版本下拉菜单导航到较早的材料。


== 另请参阅

* 返回到 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]主页面。
//浏览文档开发和设计部分，以更好地了解MuleSoft产品。
